--- a/app/Admin/pages/cours/cours_add.html
+++ b/app/Admin/pages/cours/cours_add.html
@@ -14,34 +14,72 @@
                     <input type="text" ng-model="newCours.intitule" class="form-control" id="intitule" placeholder="intitule"/>
                 </div>
             </div>
+            </div>
+        </div>
+
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="section" class="col-sm-2 control-label">Section</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newCours.section" class="form-control" id="section" placeholder="section"/>
                 </div>
             </div>
+            </div>
+        </div>
 
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="reference" class="col-sm-2 control-label">Référence</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newCours.reference" class="form-control" id="reference" placeholder="reference"/>
                 </div>
             </div>
+            </div>
+        </div>
 
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
                 <label for="description" class="col-sm-2 control-label">Description</label>
                 <div class="col-sm-10">
                     <textarea ng-model="newCours.description" class="form-control" id="description" placeholder="description"/>
                 </div>
             </div>
+            </div>
+        </div>
 
-
-
+    <div class="row">
+        <div class="col-lg-12">
             <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
+                <label for="image" class="col-sm-2 control-label">Image</label>
+                <div class="col-sm-10">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Enter image url" id="image">
+                        <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">Browse</button>
+                        </span>
+                    </div>
+                </div><!-- /input-group -->
+            </div>
+        </div>
+    </div>
+
+            <hr>
+
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-4">
                     <input type="submit" ng-click="addCours()" class="btn btn-primary" value="Ajouter Cours"/>
                 </div>
+                <div class="col-sm-4">
+                    <input class="btn btn-primary-inverse" value="Annuler" ng-click="annuler()">
+                    </div>
             </div>
+        </div>
         </div>
     </div>
 </div>
