--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -19,10 +19,10 @@
                     <div>
                         <div class="col-lg-6 pull-right" style="margin-bottom: 10px">
                             <div class="input-group">
-                                <input ng-show="!searchLabel" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
+                                <input ng-show="!searchLabel" type="text" class="form-control" aria-label="..." ng-model="searchBox.nom">
 
-                                <input ng-if="searchLabel === 'Nom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
-                                <input ng-if="searchLabel === 'Prenom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Prenom">
+                                <input ng-if="searchLabel === 'Nom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.nom">
+                                <input ng-if="searchLabel === 'Prenom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.prenom">
                                 <input ng-if="searchLabel === 'Pseudo'" type="text" class="form-control" aria-label="..." ng-model="searchBox.username">
                                 <input ng-if="searchLabel === 'email'" type="text" class="form-control" aria-label="..." ng-model="searchBox.email">
                                 <input ng-if="searchLabel === 'cours'" type="text" class="form-control" aria-label="..." ng-model="searchBox.cours">
@@ -47,15 +47,15 @@
                         <thead>
                             <tr class="">
                                 <th></th>
-                                <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='Nom'; nomup=true">
+                                <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='nom'; nomup=true">
                                     <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                    <a ng-show="nomup" href="" ng-click="myOrderBy='-Nom'; nomup=false">
+                                    <a ng-show="nomup" href="" ng-click="myOrderBy='-nom'; nomup=false">
                                         <span class="glyphicon glyphicon-triangle-top"></span>
                                     </a>
                                 </th>
-                                <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='Prenom'; prenomup=true">
+                                <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='prenom'; prenomup=true">
                                     <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                    <a ng-show="prenomup" href="" ng-click="myOrderBy='-Prenom'; prenomup=false">
+                                    <a ng-show="prenomup" href="" ng-click="myOrderBy='-prenom'; prenomup=false">
                                         <span class="glyphicon glyphicon-triangle-top"></span>
                                     </a>
                                 </th>
@@ -99,9 +99,9 @@
                                 </div>
                             </td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(enseignant.enseignant_id)"><i class="fa fa-list"></i>
+                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(enseignant.id)"><i class="fa fa-list"></i>
                             </button>
-                            <button type="button" class="btn btn-danger btn-circle-micro"  ng-click="deleteEnseignant(enseignant.enseignant_id)"><i class="fa fa-times"></i>
+                            <button type="button" class="btn btn-danger btn-circle-micro"  ng-click="deleteEnseignant(enseignant.id)"><i class="fa fa-times"></i>
                             </button>
                         </td>
                         </tr>
@@ -111,8 +111,7 @@
                                 <ul class="">
                                     <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{enseignant.username}}</a></li>
                                     <li class="hidden-xl hidden-lg"><a href="#">email: {{enseignant.email}}</a></li>
-                                    <li class=""><a href="#">enseignant_id: {{enseignant.enseignant_id}}</a></li>
-                                    <li class=""><a href="#">user_id: {{enseignant.user_id}}</a></li>
+                                    <li class=""><a href="#">user_id: {{enseignant.id}}</a></li>
                                 </ul>
                             </td>
                         </tr>
