mise a jour de cours service et userservice

--- a/app/Admin/pages/cours/cours_add.html
+++ b/app/Admin/pages/cours/cours_add.html
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <label for="intitule" class="col-sm-2 control-label">Intitulé</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newCours.intitule" class="form-control" id="intitule" placeholder="intitule"/>
+                    <input type="text" ng-model="newCours.nom" class="form-control" id="intitule" placeholder="intitule"/>
                 </div>
             </div>
             </div>
@@ -20,24 +20,14 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="form-group">
-                <label for="section" class="col-sm-2 control-label">Section</label>
+                <label for="section" class="col-sm-2 control-label">Catégorie</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newCours.section" class="form-control" id="section" placeholder="section"/>
+                    <input type="text" ng-model="newCours.categorie_id" class="form-control" id="section" placeholder="section"/>
                 </div>
             </div>
             </div>
         </div>
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="form-group">
-                <label for="reference" class="col-sm-2 control-label">Référence</label>
-                <div class="col-sm-10">
-                    <input type="text" ng-model="newCours.reference" class="form-control" id="reference" placeholder="reference"/>
-                </div>
-            </div>
-            </div>
-        </div>
 
     <div class="row">
         <div class="col-lg-12">
