--- a/app/Admin/pages/cours/cours_add_User.html
+++ b/app/Admin/pages/cours/cours_add_User.html
@@ -10,7 +10,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Ajouter un enseignant au cours
+                    Ajouter un élève au cours
                 </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -66,10 +66,10 @@
                         </thead>
                         <tbody>
 
-                        <tr class="infos" ng-repeat-start="enseignant in EnseignantsList | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
-                            <td>{{enseignant.Nom}}</td>
-                            <td>{{enseignant.Prenom}}</td>
-                            <td class=>{{enseignant.username}}</td>
+                        <tr class="infos" ng-repeat-start="eleve in UserList | filter:searchBox| orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                            <td>{{eleve.Nom}}</td>
+                            <td>{{eleve.Prenom}}</td>
+                            <td class=>{{eleve.username}}</td>
                             <td><input type="checkbox" value=""> </input>
                             </td>
                         </tr>
