--- a/app/Admin/pages/cours/cours_update.html
+++ b/app/Admin/pages/cours/cours_update.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{Cours.intitule}}</h1>
+            <h1 class="page-header">{{Cours.nom}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -20,13 +20,13 @@
                     <div class="form-group">
                         <label for="intitule" class="col-sm-2 control-label">Intitulé</label>
                         <div class="col-sm-10">
-                            <input type="text" ng-model="Cours.intitule" class="form-control" id="intitule" value="{{Cours.intitule}}"/>
+                            <input type="text" ng-model="Cours.nom" class="form-control" id="intitule" value="{{Cours.nom}}"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="section" class="col-sm-2 control-label">Section</label>
                         <div class="col-sm-10">
-                            <input type="text" ng-model="Cours.section" class="form-control" id="section" value="{{Cours.section}}"/>
+                            <input type="text" ng-model="Cours.categorie" class="form-control" id="section" value="{{Cours.categorie.nom}}"/>
                         </div>
                     </div>
 
@@ -62,15 +62,15 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example1">
                                 <thead>
                                 <tr class="">
-                                    <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='Nom'; nomup=true">
+                                    <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='nom'; nomup=true">
                                         <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                        <a ng-show="nomup" href="" ng-click="myOrderBy='-Nom'; nomup=false">
+                                        <a ng-show="nomup" href="" ng-click="myOrderBy='-nom'; nomup=false">
                                             <span class="glyphicon glyphicon-triangle-top"></span>
                                         </a>
                                     </th>
-                                    <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='Prenom'; prenomup=true">
+                                    <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='prenom'; prenomup=true">
                                         <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                        <a ng-show="prenomup" href="" ng-click="myOrderBy='-Prenom'; prenomup=false">
+                                        <a ng-show="prenomup" href="" ng-click="myOrderBy='-prenom'; prenomup=false">
                                             <span class="glyphicon glyphicon-triangle-top"></span>
                                         </a>
                                     </th>
@@ -91,13 +91,13 @@
                                 </thead>
                                 <tbody>
 
-                                <tr class="infos" ng-repeat-start="enseignant in Cours.enseignant| filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                                <tr class="infos" ng-repeat="enseignant in UsersList| filter:searchBox | filter:{role:{id:3}} | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
                                     <td>{{enseignant.nom}}</td>
                                     <td>{{enseignant.prenom}}</td>
                                     <td class="hidden-sm hidden-xs">{{enseignant.username}}</td>
                                     <td class="hidden-sm hidden-xs">{{enseignant.email}}</td>
                                     <td>
-                                        <button type="button" class="btn btn-danger btn-circle-micro" ng-click="goToDeleteTeacher(cours.id, enseignant.enseignant_id)"><i class="fa fa-times"></i>
+                                        <button type="button" class="btn btn-danger btn-circle-micro" ng-click="deleteUser(Cours.id,enseignant.id)"><i class="fa fa-times"></i>
                                         </button>
                                     </td>
                                 </tr>
@@ -107,17 +107,15 @@
                                         <ul class="">
                                             <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{enseignant.username}}</a></li>
                                             <li class="hidden-xl hidden-lg"><a href="#">email: {{enseignant.email}}</a></li>
-                                            <li class=""><a href="#">enseignant_id: {{enseignant.enseignant_id}}</a></li>
-                                            <li class=""><a href="#">user_id: {{enseignant.user_id}}</a></li>
+                                            <li class=""><a href="#">enseignant_id: {{enseignant.id}}</a></li>
                                         </ul>
                                     </td>
                                 </tr>
-                                <td></td>
                                 </tr>
                                 </tbody>
 
                             </table>
-                            <button class="btn btn-primary pull-right" ng-click="goToAddTeacher(cours.id)">Ajouter un professeur</button>
+                            <button class="btn btn-primary pull-right" ng-click="goToAddUser(3)">Ajouter un professeur</button>
                         </table>
 
                     </div>
@@ -145,15 +143,15 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                 <tr class="">
-                                    <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='Nom'; nomup=true">
+                                    <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='nom'; nomup=true">
                                         <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                        <a ng-show="nomup" href="" ng-click="myOrderBy='-Nom'; nomup=false">
+                                        <a ng-show="nomup" href="" ng-click="myOrderBy='-nom'; nomup=false">
                                             <span class="glyphicon glyphicon-triangle-top"></span>
                                         </a>
                                     </th>
-                                    <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='Prenom'; prenomup=true">
+                                    <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='prenom'; prenomup=true">
                                         <span class="glyphicon glyphicon-triangle-bottom"></span></a>
-                                        <a ng-show="prenomup" href="" ng-click="myOrderBy='-Prenom'; prenomup=false">
+                                        <a ng-show="prenomup" href="" ng-click="myOrderBy='-prenom'; prenomup=false">
                                             <span class="glyphicon glyphicon-triangle-top"></span>
                                         </a>
                                     </th>
@@ -174,13 +172,13 @@
                                 </thead>
                                 <tbody>
 
-                                <tr class="infos" ng-repeat-start="eleve in Cours.eleves| filter:searchBox | orderBy:myOrderBy " ng-class-odd="'odd'" ng-class-even="'even'">
-                                    <td>{{eleve.Nom}}</td>
-                                    <td>{{eleve.Prenom}}</td>
+                                <tr class="infos" ng-repeat="eleve in UsersList| filter:searchBox| filter:{role:{id:2}}| orderBy:myOrderBy " ng-class-odd="'odd'" ng-class-even="'even'">
+                                    <td>{{eleve.nom}}</td>
+                                    <td>{{eleve.prenom}}</td>
                                     <td class="hidden-sm hidden-xs">{{eleve.username}}</td>
                                     <td class="hidden-sm hidden-xs">{{eleve.email}}</td>
                                     <td>
-                                        <button type="button" class="btn btn-danger btn-circle-micro" ng-click="goToDeleteEleve(cours.id, eleve.eleves_id)"><i class="fa fa-times"></i>
+                                        <button type="button" class="btn btn-danger btn-circle-micro" ng-click="deleteUser(Cours.id,eleve.id)"><i class="fa fa-times"></i>
                                         </button>
                                     </td>
                                 </tr>
@@ -190,17 +188,15 @@
                                         <ul class="">
                                             <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{eleve.username}}</a></li>
                                             <li class="hidden-xl hidden-lg"><a href="#">email: {{eleve.email}}</a></li>
-                                            <li class=""><a href="#">eleve_id: {{eleve.eleves_id}}</a></li>
-                                            <li class=""><a href="#">user_id: {{eleve.user_id}}</a></li>
+                                            <li class=""><a href="#">user_id: {{eleve.id}}</a></li>
                                         </ul>
                                     </td>
                                 </tr>
-                                <td></td>
                                 </tr>
                                 </tbody>
 
                             </table>
-                            <button class="btn btn-primary pull-right" ng-click="goToAddEleve(cours.id)">Ajouter un élève</button>
+                            <button class="btn btn-primary pull-right" ng-click="goToAddUser(2)">Ajouter un élève</button>
                         </table>
 
                     </div>
