--- a/app/Admin/pages/cours/cours_view.html
+++ b/app/Admin/pages/cours/cours_view.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{cours.intitule}}</h1>
+            <h1 class="page-header">{{cours.nom}}</h1>
 
             <!---------------------Enseignants--------------------->
 
@@ -46,9 +46,9 @@
                                 </thead>
                                 <tbody>
 
-                                <tr class="infos" ng-repeat-start="enseignant in cours.enseignants | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
-                                    <td>{{enseignant.Nom}}</td>
-                                    <td>{{enseignant.Prenom}}</td>
+                                <tr class="infos" ng-repeat-start="enseignant in UsersList| filter:searchBox | filter: enseignant.role.id |orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                                    <td>{{enseignant.nom}}</td>
+                                    <td>{{enseignant.prenom}}</td>
                                     <td class="hidden-sm hidden-xs">{{enseignant.username}}</td>
                                     <td class="hidden-sm hidden-xs">{{enseignant.email}}</td>
                                     <td>
