--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
-    <script src="app/HighCharts/HighCharts_Controller.js"></script>
+    <!--<script src="app/HighCharts/HighCharts_Controller.js"></script>-->
 
     <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/enseignant/pages/enseignant_controller.js"></script>
@@ -84,7 +84,7 @@
     <link rel="stylesheet" type="text/css" href="dist/pivot.css">
     <script type="text/javascript" src="dist/pivot.js"></script>
     <script type="text/javascript" src="dist/gchart_renderers.js"></script>
-
+    <script type="text/javascript" src="dist/HighCharts_Controller.js"></script>
 
     <!-- optional: mobile support with jqueryui-touch-punch -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
