--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src='app/bower_components/textAngular/dist/textAngular.min.js'></script>
     <script src="app/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="app/bower_components/angular-route/angular-route.js"></script>
     <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="app/bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
