--- a/app/enseignant/pages/evaluations/pivottable.html
+++ b/app/enseignant/pages/evaluations/pivottable.html
@@ -142,6 +142,7 @@
                                 }
 
                                 $("#output").pivotUI(mps, {
+                                    parametresFiabilite: null,
                                     renderers: renderers,
                                     derivedAttributes: {
 
