--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="app/Admin/dist/js/sb-admin-2.js"></script>
     <script src="app/bower_components/pdfjs-dist/build/pdf.js"></script>
     <script src="app/bower_components/angular-pdf/dist/angular-pdf.js"></script>
+    <script src="app/bower_components/checklist-model/checklist-model.js"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
 
@@ -56,6 +57,7 @@
     <script src="app/services/groupes_service.js"></script>
     <script src="app/services/cours_service.js"></script>
     <script src="app/services/httpq.js"></script>
+    <script src="app/services/categorie_service.js"></script>
 
     <!--------------------------------- CONTROLLERS--------------------------------------------->
     <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
