--- a/app/Admin/pages/admin.html
+++ b/app/Admin/pages/admin.html
@@ -42,7 +42,7 @@
                     <ul class="nav" id="side-menu">
 
                         <li>
-                            <a ui-sref="admin"><i class="fa fa-home fa-fw"></i> Dashboard</a>
+                            <a ui-sref="admin"><i class="fa fa-home fa-fw"></i> Tableau de bord</a>
                         </li>
                         <li>
                             <a ui-sref="admin.cours"><i class="fa fa-table fa-fw"></i> Cours</a>
@@ -55,9 +55,6 @@
                         </li>
                         <li>
                             <a ui-sref="admin.groupes"><i class="fa fa-table fa-fw"></i> Groupes</a>
-                        </li>
-                        <li>
-                            <a href="forms.html"><i class="fa fa-table fa-fw"></i> Paramètres</a>
                         </li>
                     </ul>
                 </div>
