--- a/app/enseignant/pages/evaluations/pivottable.html
+++ b/app/enseignant/pages/evaluations/pivottable.html
@@ -147,9 +147,9 @@
                                     derivedAttributes: {
 
                                     },
-                                    cols: ["note"], rows: ["question"],
-                                    rendererName: "Histogramme",
-                                    aggregatorName: "Effectifs totaux",
+                                    cols: ["question"], rows: ["grader"],
+                                    rendererName: "Carte de Chaleur",
+                                    aggregatorName: "Fiabilité",
                                     vals: [
                                         "note"
                                     ]
